--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
             <div class="col">
                 <div class="card">
-                    <img src="./img/zenitsu.jpg" class="card-img-top" alt="...">
+                    <img src="./img/abderrahim2929.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Abderrahim</h5>
                         <p class="card-text">Hi , i can offer many services  in case you needed one  feel free to text me.</p>
                     </div>
                     <div class="mb-5 d-flex justify-content-around">
                         <h3></h3>
-                        <a href="https://www.instagram.com/n_e._.a_r"><button  class="btn btn-primary">follow</button></a>
+                        <a href="https://www.instagram.com/abderrahim2929/"><button  class="btn btn-primary">follow</button></a>
                     </div>
                 </div>
             </div>
